--- a/spec/MetaObject.Specs.csproj
+++ b/spec/MetaObject.Specs.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{F9C1416F-A54C-460D-8565-925DF26DFF96}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DynamicObjectProxy.Specs</RootNamespace>
-    <AssemblyName>DynamicObjectProxy.Specs</AssemblyName>
+    <RootNamespace>MetaObject.Specs</RootNamespace>
+    <AssemblyName>MetaObject.Specs</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -50,9 +50,9 @@
     <Compile Include="**\*.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\DynamicObjectProxy.csproj">
+    <ProjectReference Include="..\src\MetaObject.csproj">
       <Project>{758EAD3F-01A3-4BBF-AA97-9947D7394339}</Project>
-      <Name>DynamicObjectProxy</Name>
+      <Name>MetaObject</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
